--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="content_holder">
     <!--BASIC INFO + CONTACT-->
         <div id="firstBox"> <!--ABOUT ME section-->
-            <img src="./images/sban.jpg" alt="" class="aboutBox-img">
+            <img src="./images/profile.jpg" alt="" class="aboutBox-img">
 
             <h1>Hasbanny Irisson</h1>
             <h5> Computer Science</h5>
