--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                     </div>
                     <div class="col-md-6 text-md-right">
                         <a href="https://www.linkedin.com/in/hasbanny-irisson-607020131/" class="text-dark" target="_blank">
-                            <img src="C:\Users\lovek\Downloads\linkedin.svg" width="30" height="30" alt=""></a> 
+                            <img src="./images/linkedin.svg" width="30" height="30" alt=""></a> 
                         <span class="text-muted mx-2">|</span> 
                         <a href="https://github.com/hasbanny" class="text-dark" target="_blank">
-                            <img src="C:\Users\lovek\Downloads\github.svg" width="30" height="30" alt=""></a>
+                            <img src="./images/github.svg" width="30" height="30" alt=""></a>
                     </div>
                 </div>
             </footer>
