--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="navbar-nav ml-auto">
                         <a href="#" class="nav-item nav-link">About</a>
                         <a href="#" class="nav-item nav-link">Projects</a>
-                        <a href="#" class="nav-item nav-link">Research</a>
+                        <a href="research.html" class="nav-item nav-link">Research</a>
                     </div>
                 </div>
             </div>    
