--- a/research.html
+++ b/research.html
@@ -10,17 +10,17 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">    
     </head>
     <body>
-    <!-- NAVIGATION BAR -->
-        <nav class="navbar navbar-expand-md mb-3">
+     <!-- NAVIGATION BAR -->
+     <nav class="navbar navbar-light navbar-expand-md mb-3">
             <div class="container-fluid">
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="#" class="nav-item nav-link">About</a>
+                        <a href="index.html" class="nav-item nav-link">About</a>
                         <a href="#" class="nav-item nav-link">Projects</a>
-                        <a href="#" class="nav-item nav-link">Research</a>
+                        <a href="research.html" class="nav-item nav-link">Research</a>
                     </div>
                 </div>
             </div>    
