--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id="title" >
                 <h2 class="titles" align="center">ABOUT ME</h2>
             </div>
-            <div class="row">
+            <div id="content" class="row">
                 <div id="firstBox" class="col-sm-4">
                     <img src="./images/profile.jpg" alt="" class="aboutBox-img">
                     <h1>Hasbanny Irisson</h1>
@@ -60,10 +60,10 @@
             <!-- FOOTER -->
             <footer class="container fixed-bottom">
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-6">
                         <p>Copyright &copy; 2019 Hasbanny Irisson</p>
                     </div>
-                    <div class="col-sm-6 text-md-right">
+                    <div class="col-6 text-md-right">
                         <a href="https://www.linkedin.com/in/hasbanny-irisson-607020131/" class="text-dark" target="_blank">
                             <img src="./images/linkedin.svg" width="30" height="30" alt=""></a> 
                         <span class="text-muted mx-2">|</span> 
