adjusting footer for smaller screens

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <!-- FOOTER -->
             <footer class="container fixed-bottom">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-8">
                         <p>Copyright &copy; 2019 Hasbanny Irisson</p>
                     </div>
-                    <div class="col-6 text-md-right">
+                    <div class="col-4 text-right">
                         <a href="https://www.linkedin.com/in/hasbanny-irisson-607020131/" class="text-dark" target="_blank">
                             <img src="./images/linkedin.svg" width="30" height="30" alt=""></a> 
                         <span class="text-muted mx-2">|</span> 
