--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="#" class="nav-item nav-link">About</a>
-                        <a href="#" class="nav-item nav-link">Projects</a>
+                        <a href="#" class="nav-item nav-link active">About</a>
+                        <a href="projects.html" class="nav-item nav-link">Projects</a>
                         <a href="research.html" class="nav-item nav-link">Research</a>
                     </div>
                 </div>
