--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,8 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link">About</a>
-                        <a href="projects.html" class="nav-item nav-link">Projects</a>
-                        <a href="research.html" class="nav-item nav-link active">Research</a>
+                        <a href="projects.html" class="nav-item nav-link active">Projects</a>
+                        <a href="research.html" class="nav-item nav-link">Research</a>
                     </div>
                 </div>
             </div>    
