adding project cards and research template

--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,63 @@
                 </div>
             </div>    
         </nav>
-    <!-- TWO COLUMN LAYOUT -->
+    <!-- THREE COLUMN CARD LAYOUT -->
         <div class="container">
-    
+            <div id="title">
+                <h2 class="titles" align="center">PROJECTS</h2>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card">
+                        <img class="card-img-top" src="./images/snapsnack.png" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">SnapSnack!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card">
+                        <img class="card-img-top" src="./images/RGVhunting.png" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">Valley's Hunting Game</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card">
+                        <img class="card-img-top" src="./images/lookit.png" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">LookIt!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card">
+                        <img class="card-img-top" src="./images/noimage.png" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">C compiler</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card">
+                        <img class="card-img-top" src="./images/noimage.png" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">Web App</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card">
+                        <img class="card-img-top" src="./images/noimage.png" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">Kato Sushi Database System</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <!-- FOOTER -->
             <footer class="container fixed-bottom">
