--- a/research.html
+++ b/research.html
@@ -25,9 +25,23 @@
                 </div>
             </div>    
         </nav>
-    <!-- TWO COLUMN LAYOUT -->
+    <!-- ONE COLUMN LAYOUT -->
         <div class="container">
-    
+            <div id="title" >
+                <h2 class="titles" align="center">RESEARCH</h2>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h5>University of Texas -Rio Grande Valley, <strong>Dr. Marzieh Ayati</strong></h5>
+                    <h6>Phosphoproteomics Analysis</h6>
+                    <p>Descrition of the project</p>
+                </div>
+                <div class="col-sm-12">
+                    <h5>University of Texas -Rio Grande Valley, <strong>Dr. Megan Strait</strong></h5>
+                    <h6>Human Interaction in Social Robotics</h6>
+                    <p>Description of the project</p>
+                </div>
+            </div>
 
             <!-- FOOTER -->
             <footer class="container fixed-bottom">
