changing layout and theme

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h1>Hasbanny Irisson</h1>
                     <h5> Computer Science</h5>
                     <p align="center"><a href="mailto: hasbanny@aol.com"><i class="far fa-envelope" size=2x align="center"></i></a></p>
-                    <p> <a href="./resume.pdf" target="_blank">Resume</a></p>
+                    <p> <a href="./IRISSONHASBANNY_Resume.pdf" target="_blank">Resume</a></p>
                 </div>
                 <div id="secndBx" class="col-sm-8">
                     <p align="justify">My name is Hasbanny Irisson, and I am 22-year-old latina living in the Rio Grande Valley.
