--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hasbanny Irisson - Contact</title>
+        <title>H.I. Contact</title>
 
         <meta charset="utf-8">
         <meta name="description" content="">
@@ -55,7 +55,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                       <a href="about.html">About</a>
+                       <a href="index.html">About</a>
                     </li>
                     <li>
                        <a href="projects.html">Projects</a>
