--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Patsy Doherty -  Services</title>
+        <title>H.I. Projects</title>
 
         <meta charset="utf-8">
         <meta name="description" content="">
@@ -54,7 +54,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                <ul class="nav navbar-nav">
                    <li>
-                      <a href="about.html">About</a>
+                      <a href="index.html">About</a>
                    </li>
                    <li class="active">
                       <a href="projects.html">Projects</a>
