--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
              
              <!-- Start right image -->
              <div class="col-md-4 wow fadeIn" data-wow-delay="0.1s">
-               <img src="img/about12.jpg" alt="" class="photo-about"/> 
+               <img src="img/Hasbanny_horizontal.jpg" alt="" class="photo-about"/> 
              </div>
              <!-- End right image -->
          </div>
