--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <link href="css/animate.css" rel="stylesheet">
         
         <!-- Google fonts -->
-        <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Qwigley" >
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Qwigley|Oxygen" >
         <!-- Font awesome -->
         <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
